--- a/src/main/webapp/academico/director-ditrital/template/menu.xhtml
+++ b/src/main/webapp/academico/director-ditrital/template/menu.xhtml
@@ -50,7 +50,7 @@
 
 				<h:outputLink
 					value="#{request.contextPath}/director-ditrital/gerenciar-funcionario.jsf"
-					styleClass="dropdown-item">Gerenciar Funcionário</h:outputLink>
+					styleClass="dropdown-item">Gerir Funcionário</h:outputLink>
 
 
 				<h:outputLink
