--- a/src/main/webapp/academico/director/template/menu.xhtml
+++ b/src/main/webapp/academico/director/template/menu.xhtml
@@ -29,12 +29,12 @@
 					</h:outputLink>
 				<h:outputLink value="#{request.contextPath}/director/sala.jsf"
 					styleClass="dropdown-item">
-						Gerenciar sala 
+						Gerir sala 
 					</h:outputLink>
 				<h:commandLink
 					action="#{disciplinaClasseBean.cadastroDisciplinaClasseDirector}"
 					styleClass="dropdown-item">
-						Gerenciar Disciplinas na Classe
+						Gerir disciplinas da Classe
 					</h:commandLink>
 
 
@@ -52,7 +52,7 @@
 				<h:outputLink
 					value="#{request.contextPath}/director/alterar-matriz.jsf"
 					styleClass="dropdown-item">
-								Alterar matriz Curricular
+								Finlizar matriz curricular
 							</h:outputLink>
 
 			</div></li>
@@ -64,7 +64,7 @@
 
 				<h:outputLink styleClass="dropdown-item"
 					value="#{request.contextPath}/director/turma.jsf">
-								Gerenciar turma
+								Gerir turma
 						</h:outputLink>
 
 
@@ -92,7 +92,7 @@
 				<ui:remove>
 					<h:outputLink styleClass="dropdown-item"
 						value="#{request.contextPath}/director/horario.jsf">
-					Gerenciar Horários das Turmas
+					Gerir Horários das Turmas
 				</h:outputLink>
 				</ui:remove>
 
@@ -104,7 +104,7 @@
 			<div class="dropdown-menu" aria-labelledby="dropdown01">
 
 				<h:outputLink styleClass="dropdown-item" value="#">
-								Gerenciar aluno
+								Gerir aluno
 						</h:outputLink>
 
 			</div></li>
