--- a/src/main/webapp/academico/programador/template/menu.xhtml
+++ b/src/main/webapp/academico/programador/template/menu.xhtml
@@ -25,18 +25,21 @@
 			<div class="dropdown-menu" aria-labelledby="dropdown01">
 				<h:outputLink
 					value="#{request.contextPath}/programador/distrito.jsf"
-					styleClass="dropdown-item">Cadastro de distrito</h:outputLink>
+					styleClass="dropdown-item">Distrito</h:outputLink>
 				<h:outputLink value="#{request.contextPath}/programador/pais.jsf"
-					styleClass="dropdown-item">Cadastro de país</h:outputLink>
+					styleClass="dropdown-item">País</h:outputLink>
 				<h:outputLink
 					value="#{request.contextPath}/programador/permissao.jsf"
-					styleClass="dropdown-item">Cadastro de permissão</h:outputLink>
+					styleClass="dropdown-item">Permissão</h:outputLink>
 					<h:outputLink
 					value="#{request.contextPath}/programador/turno.jsf"
-					styleClass="dropdown-item">Cadastro de turno</h:outputLink>
+					styleClass="dropdown-item">Turno</h:outputLink>
 				<h:outputLink
 					value="#{request.contextPath}/programador/unidade-distrital.jsf"
-					styleClass="dropdown-item">Cadastro de unidade distrital</h:outputLink>
+					styleClass="dropdown-item">Unidade distrital</h:outputLink>
+					<h:outputLink
+					value="#{request.contextPath}/programador/dias-semana.jsf"
+					styleClass="dropdown-item">Dias da Semana</h:outputLink>
 			</div></li>
 
 		<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
