--- a/src/main/webapp/academico/director/template/menu.xhtml
+++ b/src/main/webapp/academico/director/template/menu.xhtml
@@ -80,7 +80,7 @@
 
 				<h:outputLink styleClass="dropdown-item"
 					value="#{request.contextPath}/director/matricula.jsf">
-								Gerir Matrícula
+								Gerir matrícula
 						</h:outputLink>
 			</div></li>
 	<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
