--- a/src/main/webapp/academico/professor/template/meusdados.xhtml
+++ b/src/main/webapp/academico/professor/template/meusdados.xhtml
@@ -18,8 +18,7 @@
 		<ui:include src="/academico/professor/template/menu.xhtml" />
 	</ui:define>
 	<ui:define name="dados_pessoas">
-		<ui:include
-			src="/academico/professor/template/dados_pessoas.xhtml" />
+		<ui:include src="/academico/professor/template/dados_pessoas.xhtml" />
 	</ui:define>
 
 	<ui:define name="ambiente_comum">
@@ -51,13 +50,12 @@
 					<h:panelGroup
 						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
 						<div class="form-group row">
-							<h:outputLabel  styleClass="tesx-right col-sm-2 col-form-label"
+							<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
 								value="Senha:*" />
 							<div class="col-sm-6">
 								<h:inputSecret styleClass="form-control font-size16"
 									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório"
-									>
+									requiredMessage="o campo senha é obrigatório">
 									<f:passThroughAttribute name="placeholder"
 										value="Introduza a sua senha" />
 									<f:passThroughAttribute name="autofocus" value="true" />
@@ -75,29 +73,29 @@
 						<div class="form-group row">
 							<h:outputLabel styleClass="col-sm-2 col-form-label"
 								value="Usuário:" />
-							<div class="col-sm-6">
+							<div class="col-sm-3">
 								<h:inputText value="#{buscarFotoBean.usuario.login}"
-									styleClass="form-control" style="margin-left: -3%;"
-									disabled="true" />
+									styleClass="form-control" disabled="true" />
 							</div>
 						</div>
 
 						<div class="form-group row">
 							<h:outputLabel styleClass="col-sm-2 col-form-label"
 								value="Nome Completo:" />
-							<div class="col-sm-8">
-								<h:inputText disabled="true" value="#{buscarFotoBean.usuario.nome}"
-									styleClass="form-control"  />
+							<div class="col-sm-5">
+								<h:inputText disabled="true"
+									value="#{buscarFotoBean.usuario.nome}"
+									styleClass="form-control" />
 							</div>
 						</div>
 
 						<div class="form-group row">
 							<h:outputLabel styleClass="col-sm-2 col-form-label"
 								value="E-mail:" />
-							<div class="col-sm-7">
+							<div class="col-sm-5">
 								<h:inputText value="#{buscarFotoBean.usuario.email}"
+									disabled="#{buscarFotoBean.usuario.email !=''}"
 									styleClass="form-control"
-									
 									validatorMessage="Email inválido. Por favor introduza um Email correcto!">
 									<f:passThroughAttribute name="placeholder"
 										value="exemplo@exemplos.com"></f:passThroughAttribute>
@@ -108,10 +106,10 @@
 						</div>
 
 						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label" value="Gênero:" />
+							<h:outputLabel styleClass="col-sm-2 col-form-label"
+								value="Gênero:" />
 							<div class="col-sm-3">
 								<h:selectOneMenu styleClass="form-control"
-									
 									value="#{buscarFotoBean.usuario.sexo}">
 									<f:selectItem itemLabel="MASCULINO" itemValue="true" />
 									<f:selectItem itemLabel="FEMENINO" itemValue="false" />
@@ -123,21 +121,20 @@
 								value="Telefone : " />
 							<div class="col-sm-3">
 								<h:inputText value="#{buscarFotoBean.usuario.telefone}"
-									styleClass="form-control " 
+									styleClass="form-control "
 									onkeypress="return formata_mascara(this, event)" />
 							</div>
 						</div>
 
-						<div style="margin-left: 8%;">
+						<div class="row center">
+							<div class="col-sm-5">
+								<h:commandButton action="#{buscarFotoBean.voltar}"
+									value="Voltar" styleClass="btn btn-success" />
+								<h:commandButton action="#{buscarFotoBean.atualizarDados}"
+									value="Guardar" styleClass="btn btn-primary"
+									style="margin-left: 6px;" />
 
-							<h:commandButton action="#{buscarFotoBean.atualizarDados}"
-								value="Guardar" styleClass="btn btn-primary" />
-
-							<h:commandButton
-								action="/academico/professor/index?faces-redirect=true"
-								value="Cancelar" styleClass="btn btn-success"
-								style="margin-left: 6px;" />
-
+							</div>
 						</div>
 
 					</h:panelGroup>
