--- a/src/main/webapp/academico/programador/template/meusdados.xhtml
+++ b/src/main/webapp/academico/programador/template/meusdados.xhtml
@@ -22,128 +22,8 @@
 	</ui:define>
 
 	<ui:define name="ambiente_comum">
-		<h:form id="form_ambiente_comum" styleClass="form-atualizar"
-			enctype="multipart/form-data">
-
-			<!--Panel-->
-			<div class="card">
-				<h4 class="peg-titulo card-header primary-color white-text ">
-
-					<h:outputText value="Meus Dados" style="font-weight: 700;" />
-
-				</h4>
-				<h:panelGroup
-					rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-					<h:panelGrid styleClass="nao-ha-dado ui-widget-header margin">
-						<h:outputText
-							value="ATENÇÃO: Introduza a sua senha para prosseguir."
-							style="margin:10px;display: inline-block;" />
-					</h:panelGrid>
-
-				</h:panelGroup>
-				<p:messages closable="true"
-					style=" margin-left: 5px;margin-right:5px;" />
-				<div class="card-body">
-
-
-
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-						<div class="form-group row">
-							<h:outputLabel  styleClass="tesx-right col-sm-2 col-form-label"
-								value="Senha:*" />
-							<div class="col-sm-6">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório"
-									>
-									<f:passThroughAttribute name="placeholder"
-										value="Introduza a sua senha" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
-							</div>
-						</div>
-						<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
-							styleClass="btn btn-primary"
-							actionListener="#{buscarFotoBean.autenticar}" />
-
-					</h:panelGroup>
-					<h:panelGroup
-						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean !=false}">
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label"
-								value="Usuário:" />
-							<div class="col-sm-6">
-								<h:inputText value="#{buscarFotoBean.usuario.login}"
-									styleClass="form-control" style="margin-left: -3%;"
-									disabled="true" />
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label"
-								value="Nome Completo:" />
-							<div class="col-sm-8">
-								<h:inputText disabled="#{buscarFotoBean.usuario.nome !='Programador'}" value="#{buscarFotoBean.usuario.nome}"
-									styleClass="form-control" style="margin-left: -2%;" />
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label"
-								value="E-mail:" />
-							<div class="col-sm-7">
-								<h:inputText value="#{buscarFotoBean.usuario.email}"
-									styleClass="form-control"
-									style="margin-left: -2%; text-transform: lowercase;"
-									validatorMessage="Email inválido. Por favor introduza um Email correcto!">
-									<f:passThroughAttribute name="placeholder"
-										value="exemplo@exemplos.com"></f:passThroughAttribute>
-									<f:validateRegex
-										pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]" />
-								</h:inputText>
-							</div>
-						</div>
-
-						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label" value="Gênero:" />
-							<div class="col-sm-3">
-								<h:selectOneMenu styleClass="form-control"
-									style="margin-left: -2%;"
-									value="#{buscarFotoBean.usuario.sexo}">
-									<f:selectItem itemLabel="MASCULINO" itemValue="true" />
-									<f:selectItem itemLabel="FEMENINO" itemValue="false" />
-								</h:selectOneMenu>
-							</div>
-						</div>
-						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label"
-								value="Telefone : " />
-							<div class="col-sm-3">
-								<h:inputText value="#{buscarFotoBean.usuario.telefone}"
-									styleClass="form-control " style="margin-left: -2%;"
-									onkeypress="return formata_mascara(this, event)" />
-							</div>
-						</div>
-
-						<div style="margin-left: 8%;">
-
-							<h:commandButton action="#{buscarFotoBean.atualizarDados}"
-								value="Guardar" styleClass="btn btn-primary" />
-
-							<h:commandButton
-								action="#{buscarFotoBean.voltar}"
-								value="Cancelar" styleClass="btn btn-success"
-								style="margin-left: 6px;" />
-
-						</div>
-
-					</h:panelGroup>
-				</div>
-			</div>
-
-		</h:form>
+		<ui:include
+			src="/academico/escola/restrito/meusdados.xhtml" />
 
 	</ui:define>
 </ui:composition>
