--- a/src/main/webapp/resources/css/icones.css
+++ b/src/main/webapp/resources/css/icones.css
@@ -1,20 +1,27 @@
-.danger{
-	background-color: #423637;
-}
-.danger:HOVER{
+
+
+
+
+.danger {
 	background-color: #423637;
 }
 
-.texto{
-    font-size: 36px;
-    margin-bottom: 20px;	
+.danger:HOVER {
+	background-color: #423637;
 }
-.horarioIndispnivel{
-	
-    color: #fdf1cb;
-    font-weight: 900;
-    text-shadow: 0px 3px #b2a98f, 0px 15px 10px rgba(0,0,0,0.4), 0px 15px 2px rgba(0,0,0,0.1), 0px 15px 30px rgba(0,0,0,0.1);
+
+.texto {
+	font-size: 36px;
+	margin-bottom: 20px;
 }
+
+.horarioIndispnivel {
+	color: #fdf1cb;
+	font-weight: 900;
+	text-shadow: 0px 3px #b2a98f, 0px 15px 10px rgba(0, 0, 0, 0.4), 0px 15px
+		2px rgba(0, 0, 0, 0.1), 0px 15px 30px rgba(0, 0, 0, 0.1);
+}
+
 .peg-titulo {
 	background: #e9e9e9;
 	color: #333333;
@@ -239,9 +246,11 @@ tr.active {
 .coluna-acompanhamento-matricula {
 	text-align: center;
 }
-.perfil{
+
+.perfil {
 	display: none;
 }
+
 @media ( max-width : 504px) {
 	.icon-emitir, .icon-alocar {
 		height: 13px;
@@ -305,11 +314,10 @@ tr.active {
 }
 
 @media ( max-width : 990px) {
-
 	.dados-pessoais {
 		display: none;
 	}
-	.perfil{
-	display: block;
-}
+	.perfil {
+		display: block;
+	}
 }
